--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -25,6 +25,22 @@ slides slide.large article p {
     font-size: 52px;
     font-style: normal;
     font-weight: bold;
-    line-height: 1.2em;
+    line-height: 1.1em;
 }
 
+/* http://labs.voronianski.com/css3-grayscale/ */
+img.grayscale {
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
+  filter: grayscale(100%);
+  filter: url(grayscale.svg); /* Firefox 4+ */
+  filter: gray; /* IE 6-9 */
+  opacity: 0.3;
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
