--- a/assets/layouts/slide.html
+++ b/assets/layouts/slide.html
@@ -1,4 +1,5 @@
 <slide class="{{ slide.class }}" id="{{ slide.id }}" style="background:{{{ slide.bg }}}; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   {{# slide.header }}
   <hgroup>
     {{{ slide.header}}}
