--- a/assets/layouts/twocolvcenter.html
+++ b/assets/layouts/twocolvcenter.html
@@ -1,4 +1,5 @@
 <slide class="{{ slide.class }}" id="{{ slide.id }}">
+<img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
 <hgroup>
   {{{ slide.header}}}
 </hgroup>
