--- a/assets/layouts/vcenter.html
+++ b/assets/layouts/vcenter.html
@@ -1,11 +1,11 @@
-<slide class="{{ slide.class }}" id="{{ slide.id }}" >
+<slide class="{{ slide.class }}" id="{{ slide.id }}">
+<img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
 <hgroup>
   {{{ slide.header}}}
 </hgroup>
-<article class = 'flexbox vcenter grayscale'>
+<article class = 'flexbox vcenter'>
 {{{ slide.content }}}
 </article>
-</div>
 <!-- Presenter Notes -->
 {{# slide.pnotes}}
 <aside class="note">
