--- a/assets/layouts/twocolvcenter.html
+++ b/assets/layouts/twocolvcenter.html
@@ -1,12 +1,10 @@
-<slide class="{{ slide.class }}" id="{{ slide.id }}">
-<img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
-<hgroup>
-  {{{ slide.header}}}
-</hgroup>
+---
+layout: slide
+---
+{{{ slide.content }}}
 <div style='float:left;width:48%;' class='flexbox vcenter'>
   {{{ slide.left.html }}}
 </div>
 <div style='float:right;width:48%;' class='flexbox vcenter'>
   {{{ slide.right.html }}}
 </div>
-</slide>
